# nano-crl2-lsp

./: .gitignore  .vscodeignore  README.md  language-configuration.json  mcrl2_model.tmGrammar.json  package-lock.json  package.json  pnpm-lock.yaml
client/: package-lock.json  package.json
client/src/: extension.ts
examples/: crossing_spec.mcrl2  picalc.mcrl2  test.mcrl2
server/: Cargo.toml  README.md
server/src/: core.rs  def_info.rs  lib.rs  lsp_context.rs  main.rs  semantic_token.rs  source_mapping.rs  util.rs
